# clip

./: .gitignore  DOCS.md  README.md  clip.py  generate-docs.sh  pyproject.toml  test_clip.py
clip/: clipboard.py  main.py
